--- a/package.json
+++ b/package.json
@@ -9,11 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.1.0",
+    "@emoji-mart/react": "^1.1.0",
+    "@headlessui/react": "^1.7.7",
+    "@heroicons/react": "^1.0.6",
     "@next/font": "13.1.1",
+    "emoji-mart": "^5.4.0",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
+    "firebase": "^9.15.0",
+    "isomorphic-unfetch": "^3.1.0",
     "next": "13.1.1",
+    "next-auth": "^4.18.7",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-moment": "^1.1.2",
+    "recoil": "^0.7.6"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.20",
+    "tailwindcss": "^3.2.4"
   }
 }
